<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/background3"
    android:gravity="center"
    android:layout_height="match_parent">
    <TextView
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/swipe_hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:text="@string/swipe_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="#fff"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:text="@string/swipe_hint3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>