<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/darkerColor"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.dhishna.appdebugger.waiterapp.MainActivity">


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeter1"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/greeter2"
        android:textColor="#fff"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/start_order_btn"
        android:text="@string/take_order"
        android:onClick="takeOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
